# vessel_synthesizer

./: .gitignore  CMakeLists.txt  README.md
notebook/: api_showcase.ipynb
vessel_module/: CMakeLists.txt  glm_cast.h  python_bindings.cpp
vessel_synthesis/: CMakeLists.txt  binarytree.h  domain.cpp  domain.h  forest.h  octree.h  points.h  profiler.cpp  profiler.h  synthesizer.cpp  synthesizer.h
vessel_synthesis/test/: CMakeLists.txt  tree_test.cpp
